<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <include
        layout="@layout/app_bar"
        android:id="@+id/app_bar">
    </include>

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ViewFlipper
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/flippervw"/>

            </RelativeLayout>

            <GridLayout
                android:columnCount="2"
                android:rowCount="3"
                android:alignmentMode="alignMargins"
                android:columnOrderPreserved="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/comedy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_margin="12dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/cardview_light_background"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="6dp"
                    android:onClick="card1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/comedy" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:text="@string/comedy"
                            android:textSize="15sp"
                             />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp"
                    android:id="@+id/crime_cv"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/crime"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>
                        <TextView
                            android:layout_marginTop="12dp"
                            android:textSize="15sp"
                            android:text="@string/crime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp"
                    android:id="@+id/historical_cv"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/historical"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>
                        <TextView
                            android:layout_marginTop="12dp"
                            android:textSize="15sp"
                            android:text="@string/historical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp"
                    android:id="@+id/horror_cv"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/horror"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>
                        <TextView
                            android:layout_marginTop="12dp"
                            android:textSize="15sp"
                            android:text="@string/horror"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp"
                    android:id="@+id/political_cv"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/political"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>
                        <TextView
                            android:layout_marginTop="12dp"
                            android:textSize="15sp"
                            android:text="@string/political"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="12dp"
                    android:id="@+id/romance_cv"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="16dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:src="@drawable/romance"
                            android:layout_width="80dp"
                            android:layout_height="80dp"/>
                        <TextView
                            android:layout_marginTop="12dp"
                            android:textSize="15sp"
                            android:text="@string/romance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"></TextView>
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>